KAN-125 - Fix alignement

--- a/public/assets/PageTemplate.css
+++ b/public/assets/PageTemplate.css
@@ -133,6 +133,18 @@ thead tr {
     padding: .75rem 1rem !important;
 }
 
+.connexion-button {
+    position: absolute;
+    right: 75px;
+    bottom: 15px;
+}
+
+.profil-button {
+    position: absolute;
+    right: 200px;
+    bottom: 15px;
+}
+
 
 /*=======================================================================
                                 FOOTER PART
@@ -203,6 +215,16 @@ thead tr {
     }
     h1 {
         font-size: 25px;
+    }
+    .connexion-button {
+        position: relative;
+        right: auto;
+        bottom: auto;
+    }
+    .profil-button {
+        position: relative;
+        right: auto;
+        bottom: auto;
     }
 }
 
